--- a/package.json
+++ b/package.json
@@ -46,17 +46,15 @@
     "winston": "2.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-minify": "^0.3.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "6.26.0",
+    "@babel/cli": "7.1.5",
+    "@babel/core": "7.1.5",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "babel-plugin-transform-regenerator": "6.26.0",
     "cross-env": "^5.1.4",
     "css-loader": "^3.0.0",
     "dotenv": "4.0.0",
@@ -125,19 +123,6 @@
       "jsx",
       "node",
       "mjs"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react",
-      [
-        "env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
     ]
   },
   "eslintConfig": {
